--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "consoletvs/charts": "^6.3",
         "datatables/datatables": "^1.10",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
