--- a/.env
+++ b/.env
@@ -12,6 +12,13 @@ DB_DATABASE=omnilinks
 DB_USERNAME=root
 DB_PASSWORD=
 
+DB_CONNECTION2=mysql2
+DB_HOST2=127.0.0.1
+DB_PORT2=3306
+DB_DATABASE2=omnilinks2
+DB_USERNAME2=root
+DB_PASSWORD2=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
