--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ APP_KEY=base64:HAZlwAZTrZ9CTh7nU6PizchSRIIEaYuv+yVTRkO/IXU=
 APP_DEBUG=true
 APP_URL=http://localhost/masuk/omnilinks
 LOG_CHANNEL=stack
+SHORT_LINK = http://localhost/omn.lkz
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
