--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,24 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:HAZlwAZTrZ9CTh7nU6PizchSRIIEaYuv+yVTRkO/IXU=
 APP_DEBUG=true
-APP_URL=http://localhost
-
+APP_URL=http://localhost/masuk/omnilinks
 LOG_CHANNEL=stack
+SHORT_LINK = http://localhost/omn.lkz
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=omnilinks
+DB_USERNAME=root
+DB_PASSWORD=
+
+DB_CONNECTION2=mysql2
+DB_HOST2=127.0.0.1
+DB_PORT2=3306
+DB_DATABASE2=omnilinks2
+DB_USERNAME2=root
+DB_PASSWORD2=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,8 +33,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=28a853b7ee189b
+MAIL_PASSWORD=b090ad024d1ddd
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
