--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:HAZlwAZTrZ9CTh7nU6PizchSRIIEaYuv+yVTRkO/IXU=
 APP_DEBUG=true
-APP_URL=http://localhost/masuk/omnilinks
+APP_URL=http://localhost/omnilinks
 LOG_CHANNEL=stack
 SHORT_LINK = http://localhost/omn.lkz
 
