--- a/.htaccess
+++ b/.htaccess
@@ -19,3 +19,22 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+# Protect .env
+<Files .env>
+Order Allow,Deny
+Deny from all
+</Files>
+
+# Protect .env.example
+<Files .env.example>
+Order Allow,Deny
+Deny from all
+</Files>
+
+# Protect composer.json
+<Files composer.json>
+Order Allow,Deny
+Deny from all
+</Files>
+
