--- a/.htaccess
+++ b/.htaccess
@@ -38,3 +38,6 @@ Order Allow,Deny
 Deny from all
 </Files>
 
+# Force SSL
+RewriteCond %{HTTPS} !=on
+RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
