--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,10 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:HAZlwAZTrZ9CTh7nU6PizchSRIIEaYuv+yVTRkO/IXU=
 APP_DEBUG=true
-APP_URL=http://localhost/masuk/omnilinks
+APP_URL=http://localhost/omnilinkz
 LOG_CHANNEL=stack
-SHORT_LINK = http://localhost/omn.lkz
+SHORT_LINK = localhost/omnilinkz
+DOMAIN_TYPE=main
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -33,8 +34,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=28a853b7ee189b
-MAIL_PASSWORD=b090ad024d1ddd
+MAIL_USERNAME=b6bc1031bdf3b1
+MAIL_PASSWORD=bcfe5369f47b0d
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
@@ -44,3 +45,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AWS_ACCESS_KEY_ID=AKIAIMKJZGUPJQKR5R2A
+AWS_SECRET_ACCESS_KEY=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
+AWS_DEFAULT_REGION=us-west-2
+AWS_BUCKET=omnilinkz
