--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^1.0",
         "ramsey/uuid": "^3.8",
         "league/flysystem-aws-s3-v3": "~1.0",
+        "maatwebsite/excel": "~2.1.0",
         "aws/aws-sdk-php": "~3.0",
         "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3",
         "rap2hpoutre/laravel-log-viewer": "^1.0"
