--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "barryvdh/laravel-snappy": "^0.4.4",
+        "barryvdh/laravel-dompdf": "^0.8.2",
+        "barryvdh/laravel-snappy": "^0.4.1",
         "consoletvs/charts": "^6.3",
         "datatables/datatables": "^1.10",
         "fideloper/proxy": "^4.0",
