--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "barryvdh/laravel-dompdf": "^0.8.2",
         "barryvdh/laravel-snappy": "^0.4.1",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "consoletvs/charts": "^6.3",
         "datatables/datatables": "^1.10",
         "fideloper/proxy": "^4.0",
