--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "consoletvs/charts": "^6.3",
         "datatables/datatables": "^1.10",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "ramsey/uuid": "^3.8",
