--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "league/flysystem-aws-s3-v3": "~1.0",
         "maatwebsite/excel": "~2.1.0",
         "aws/aws-sdk-php": "~3.0",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3",
         "rap2hpoutre/laravel-log-viewer": "^1.0"
     },
