--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,21 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "aws/aws-sdk-php": "~3.0",
         "barryvdh/laravel-snappy": "^0.4.4",
         "consoletvs/charts": "^6.3",
         "datatables/datatables": "^1.10",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "ramsey/uuid": "^3.8",
         "league/flysystem-aws-s3-v3": "~1.0",
         "maatwebsite/excel": "~2.1.0",
-        "aws/aws-sdk-php": "~3.0",
-        "h4cc/wkhtmltopdf-amd64": "0.12.x",
-        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3",
-        "rap2hpoutre/laravel-log-viewer": "^1.0"
+        "ramsey/uuid": "^3.8",
+        "rap2hpoutre/laravel-log-viewer": "^1.0",
+        "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
