--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=base64:HAZlwAZTrZ9CTh7nU6PizchSRIIEaYuv+yVTRkO/IXU=
 APP_DEBUG=true
 APP_URL=http://localhost/omnilinkz
+APP_URL2=https://localhost/omnilinkz/
+APP_URL3=https://localhost/omnilinkz
 LOG_CHANNEL=stack
 SHORT_LINK = localhost/omnilinkz
 DOMAIN_TYPE=main
