--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,31 @@
+# Protect .env
+<Files .env>
+Order Allow,Deny
+Deny from all
+</Files>
+
+# Protect .env.example
+<Files .env.example>
+Order Allow,Deny
+Deny from all
+</Files>
+
+# Protect composer.json
+<Files composer.json>
+Order Allow,Deny
+Deny from all
+</Files>
+
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
     </IfModule>
 
     RewriteEngine On
+    #order deny,allow
+    #deny from all
 
     # Handle Authorization Header
-
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
 
@@ -15,30 +34,15 @@
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L] 
+    RewriteRule ^ index.php [L]
 </IfModule>
 
-# Protect .env
-<Files .env> 
-Order Allow,Deny 
-Deny from all 
-</Files>
-
-# Protect .env.example
-<Files .env.example> 
-Order Allow,Deny 
-Deny from all 
-</Files>
-
-# Protect composer.json
-<Files composer.json> 
-Order Allow,Deny 
-Deny from all 
-</Files>
-
-# Force SSL 
-RewriteCond %{HTTPS} !=on 
+# Force SSL
+RewriteCond %{HTTPS} !=on
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
