--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,11 @@
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
+        "leeovery/laravel-sendinblue": "^0.3.0",
         "maatwebsite/excel": "~2.1.0",
         "ramsey/uuid": "^3.8",
         "rap2hpoutre/laravel-log-viewer": "^1.0",
+        "webup/laravel-sendinblue": "^2.0",
         "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
     },
     "require-dev": {
