--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/tinker": "^1.0",
         "league/flysystem-aws-s3-v3": "~1.0",
         "maatwebsite/excel": "~2.1.0",
+        "mailchimp/marketing": "^3.0",
         "ramsey/uuid": "^3.8",
         "rap2hpoutre/laravel-log-viewer": "^1.0",
         "wemersonjanuario/wkhtmltopdf-windows": "0.12.2.3"
